--- a/iot_server/data/configuration.html
+++ b/iot_server/data/configuration.html
@@ -2,13 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>Configuration • ESP32 Portal</title>
+  <title>Configuration – ESP32 Portal</title>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <link rel="stylesheet" href="/css/styles.css">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+  <link rel="stylesheet" href="/css/styles.css?v=1">
+  <link rel="icon" href="/favicon.ico"/>
+  <meta name="color-scheme" content="light dark"/>
 </head>
 <body>
   <header class="topbar">
-    <h1>ESP32 • Configuration</h1>
+    <h1>ESP32 – Configuration</h1>
     <nav>
       <a href="/">Home</a>
       <button id="btnLogout">Logout</button>
@@ -16,6 +19,55 @@
   </header>
 
   <main class="container">
+    <!-- AP Wi‑Fi -->
+    <div class="card">
+      <h2>Wi‑Fi (AP/Hotspot)</h2>
+      <form id="apForm">
+        <label>AP SSID
+          <input type="text" id="apSsid" required>
+        </label>
+        <label>AP Password
+          <div class="input-affix">
+            <input type="password" id="apPass" placeholder="********">
+            <button type="button" id="toggleApPwd" class="icon-btn" aria-label="Show password" title="Show password">
+              <svg id="apEyeOpen" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path fill="currentColor" d="M12 5c-7 0-10 7-10 7s3 7 10 7s10-7 10-7s-3-7-10-7m0 12a5 5 0 1 1 .001-10.001A5 5 0 0 1 12 17m0-8a3 3 0 1 0 .001 6.001A3 3 0 0 0 12 9"/></svg>
+              <svg id="apEyeOff" style="display:none" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path fill="currentColor" d="M2 4.27L3.28 3L21 20.72L19.73 22l-2.32-2.32A10.68 10.68 0 0 1 12 19c-7 0-10-7-10-7a18.4 18.4 0 0 1 5.1-6.14L2 4.27m5.09 5.09A4.94 4.94 0 0 0 7 12a5 5 0 0 0 5 5c.69 0 1.35-.14 1.95-.39l-1.51-1.51c-.14.03-.29.05-.44.05a3 3 0 0 1-3-3c0-.15.02-.3.05-.44l-2-2M12 5c7 0 10 7 10 7a18.42 18.42 0 0 1-3.2 4.46l-1.43-1.43A10.4 10.4 0 0 0 20 12s-3-6-8-6c-.86 0-1.67.14-2.43.38L7.95 5.76C9.2 5.28 10.54 5 12 5Z"/></svg>
+            </button>
+          </div>
+        </label>
+        <div class="row">
+          <button type="button" id="apSave" class="primary">Save</button>
+          <span id="apStatus" class="muted"></span>
+        </div>
+      </form>
+    </div>
+
+    <!-- STA Wi‑Fi -->
+    <div class="card">
+      <h2>Wi‑Fi (STA)</h2>
+      <form id="wifiForm">
+        <label>SSID
+          <input type="text" id="wifiSsid" placeholder="HomeWiFi" required>
+        </label>
+        <label>Password
+          <div class="input-affix">
+            <input type="password" id="wifiPass" placeholder="********">
+            <button type="button" id="toggleWifiPwd" class="icon-btn" aria-label="Show password" title="Show password">
+              <svg id="wifiEyeOpen" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path fill="currentColor" d="M12 5c-7 0-10 7-10 7s3 7 10 7s10-7 10-7s-3-7-10-7m0 12a5 5 0 1 1 .001-10.001A5 5 0 0 1 12 17m0-8a3 3 0 1 0 .001 6.001A3 3 0 0 0 12 9"/></svg>
+              <svg id="wifiEyeOff" style="display:none" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path fill="currentColor" d="M2 4.27L3.28 3L21 20.72L19.73 22l-2.32-2.32A10.68 10.68 0 0 1 12 19c-7 0-10-7-10-7a18.4 18.4 0 0 1 5.1-6.14L2 4.27m5.09 5.09A4.94 4.94 0 0 0 7 12a5 5 0 0 0 5 5c.69 0 1.35-.14 1.95-.39l-1.51-1.51c-.14.03-.29.05-.44.05a3 3 0 0 1-3-3c0-.15.02-.3.05-.44l-2-2M12 5c7 0 10 7 10 7a18.42 18.42 0 0 1-3.2 4.46l-1.43-1.43A10.4 10.4 0 0 0 20 12s-3-6-8-6c-.86 0-1.67 .14-2.43 .38L7.95 5.76C9.2 5.28 10.54 5 12 5Z"/></svg>
+            </button>
+          </div>
+        </label>
+        <div class="row">
+          <button type="button" id="wifiSave" class="primary">Save</button>
+          <button type="button" id="wifiCancel">Cancel</button>
+          <button type="button" id="wifiConnect">Connect</button>
+          <span id="wifiStatus" class="muted"></span>
+        </div>
+      </form>
+      <div class="muted" id="wifiLive"></div>
+    </div>
+
     <!-- Auth -->
     <div class="card">
       <h2>Auth</h2>
@@ -25,10 +77,10 @@
         </label>
         <label>New Password (leave blank to keep)
           <div class="input-affix">
-            <input type="password" id="authPass" placeholder="••••••••">
+            <input type="password" id="authPass" placeholder="********">
             <button type="button" id="toggleAuthPwd" class="icon-btn" aria-label="Show password" title="Show password">
               <svg id="authEyeOpen" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path fill="currentColor" d="M12 5c-7 0-10 7-10 7s3 7 10 7s10-7 10-7s-3-7-10-7m0 12a5 5 0 1 1 .001-10.001A5 5 0 0 1 12 17m0-8a3 3 0 1 0 .001 6.001A3 3 0 0 0 12 9"/></svg>
-              <svg id="authEyeOff" style="display:none" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path fill="currentColor" d="M2 4.27L3.28 3L21 20.72L19.73 22l-2.32-2.32A10.68 10.68 0 0 1 12 19c-7 0-10-7-10-7a18.4 18.4 0 0 1 5.1-6.14L2 4.27m5.09 5.09A4.94 4.94 0 0 0 7 12a5 5 0 0 0 5 5c.69 0 1.35-.14 1.95-.39l-1.51-1.51c-.14.03-.29.05-.44.05a3 3 0 0 1-3-3c0-.15.02-.3.05-.44l-2-2M12 5c7 0 10 7 10 7a18.42 18.42 0 0 1-3.2 4.46l-1.43-1.43A10.4 10.4 0 0 0 20 12s-3-6-8-6c-.86 0-1.67.14-2.43.38L7.95 5.76C9.2 5.28 10.54 5 12 5Z"/></svg>
+              <svg id="authEyeOff" style="display:none" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path fill="currentColor" d="M2 4.27L3.28 3L21 20.72L19.73 22l-2.32-2.32A10.68 10.68 0 0 1 12 19c-7 0-10-7-10-7a18.4 18.4 0 0 1 5.1-6.14L2 4.27m5.09 5.09A4.94 4.94 0 0 0 7 12a5 5 0 0 0 5 5c.69 0 1.35-.14 1.95-.39l-1.51-1.51c-.14 .03-.29 .05-.44 .05a3 3 0 0 1-3-3c0-.15 .02-.3 .05-.44l-2-2M12 5c7 0 10 7 10 7a18.42 18.42 0 0 1-3.2 4.46l-1.43-1.43A10.4 10.4 0 0 0 20 12s-3-6-8-6c-.86 0-1.67 .14-2.43 .38L7.95 5.76C9.2 5.28 10.54 5 12 5Z"/></svg>
             </button>
           </div>
         </label>
@@ -58,30 +110,12 @@
       </form>
     </div>
 
-    <!-- Wi-Fi -->
     <div class="card">
-      <h2>Wi-Fi (STA)</h2>
-      <form id="wifiForm">
-        <label>SSID
-          <input type="text" id="wifiSsid" placeholder="HomeWiFi" required>
-        </label>
-        <label>Password
-          <div class="input-affix">
-            <input type="password" id="wifiPass" placeholder="••••••••">
-            <button type="button" id="toggleWifiPwd" class="icon-btn" aria-label="Show password" title="Show password">
-              <svg id="wifiEyeOpen" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path fill="currentColor" d="M12 5c-7 0-10 7-10 7s3 7 10 7s10-7 10-7s-3-7-10-7m0 12a5 5 0 1 1 .001-10.001A5 5 0 0 1 12 17m0-8a3 3 0 1 0 .001 6.001A3 3 0 0 0 12 9"/></svg>
-              <svg id="wifiEyeOff" style="display:none" xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24"><path fill="currentColor" d="M2 4.27L3.28 3L21 20.72L19.73 22l-2.32-2.32A10.68 10.68 0 0 1 12 19c-7 0-10-7-10-7a18.4 18.4 0 0 1 5.1-6.14L2 4.27m5.09 5.09A4.94 4.94 0 0 0 7 12a5 5 0 0 0 5 5c.69 0 1.35-.14 1.95-.39l-1.51-1.51c-.14.03-.29.05-.44.05a3 3 0 0 1-3-3c0-.15.02-.3.05-.44l-2-2M12 5c7 0 10 7 10 7a18.42 18.42 0 0 1-3.2 4.46l-1.43-1.43A10.4 10.4 0 0 0 20 12s-3-6-8-6c-.86 0-1.67.14-2.43.38L7.95 5.76C9.2 5.28 10.54 5 12 5Z"/></svg>
-            </button>
-          </div>
-        </label>
-        <div class="row">
-          <button type="button" id="wifiSave" class="primary">Save</button>
-          <button type="button" id="wifiCancel">Cancel</button>
-          <button type="button" id="wifiConnect">Connect</button>
-          <span id="wifiStatus" class="muted"></span>
-        </div>
-      </form>
-      <div class="muted" id="wifiLive"></div>
+      <h2>System</h2>
+      <div class="row">
+        <button type="button" id="btnReboot">Reboot</button>
+        <span id="rebootStatus" class="muted"></span>
+      </div>
     </div>
   </main>
 
@@ -97,6 +131,6 @@
     </div>
   </div>
 
-  <script src="/js/config.js"></script>
+  <script src="/js/configuration.js?v=2"></script>
 </body>
 </html>
