--- a/iot_server/data/login.html
+++ b/iot_server/data/login.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <title>Login • ESP32 Portal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css?v=1">
 </head>
 
 <body class="center">
@@ -38,7 +38,7 @@
             <p id="msg" class="muted"></p>
         </form>
     </main>
-    <script src="/js/login.js"></script>
+    <script src="/js/login.js?v=1"></script>
 </body>
 
 </html>
