--- a/iot_server/data/index.html
+++ b/iot_server/data/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <title>Home • ESP32 Portal</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="/css/styles.css">
+  <link rel="stylesheet" href="/css/styles.css?v=1">
 </head>
 
 <body>
@@ -18,6 +18,17 @@
   </header>
 
   <main class="container">
+    <div class="card" style="display:flex; align-items:center; justify-content:space-between; gap:12px;">
+      <div>
+        <h2 style="margin:0">Uploader</h2>
+        <div id="uploadStatus" class="muted">Checking…</div>
+      </div>
+      <div style="display:flex; gap:8px; align-items:center;">
+        <button id="btnStartUpload" class="primary">Start Upload</button>
+        <button id="btnStopUpload">Stop</button>
+      </div>
+    </div>
+
     <h2>Logs</h2>
     <div class="card">
       <table class="table" id="logsTable">
@@ -37,7 +48,7 @@
     </div>
   </main>
 
-  <script src="/js/app.js"></script>
+  <script src="/js/app.js?v=1"></script>
 </body>
 
 </html>
