sending to server fixed using cursor. this is before migraring to spooling

--- a/iot_server/data/configuration.html
+++ b/iot_server/data/configuration.html
@@ -113,8 +113,9 @@
     <div class="card">
       <h2>System</h2>
       <div class="row">
+        <button type="button" id="btnResetLogs">Reset logs</button>
         <button type="button" id="btnReboot">Reboot</button>
-        <span id="rebootStatus" class="muted"></span>
+        <span id="sysStatus" class="muted"></span>
       </div>
     </div>
   </main>
